docker-server/kubernetes/lhci-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: lhci
  labels:
    name: lhci-server
