docker-server/kubernetes/lhci-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lhci-server
  labels:
    name: lhci-server
spec:
  ports:
  - port: 80
    targetPort: 9001
    nodePort: 30001
  selector:
    name: lhci-server
  type: NodePort
