docker-server/kubernetes/lhci-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: lhci-server
spec:
  ports:
  - port: 80
    targetPort: 9001
  selector:
    name: lhci-server
#  type: NodePorts

  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lhci-server
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lhci-example-com
    networking.gke.io/managed-certificates: lhci-example-com
spec:
  rules:
  - http:
      paths:
      - path: /lh
        pathType: Prefix
        backend:
          service:
            name: lhci-server
            port:
              number: 80

#---
#apiVersion: networking.gke.io/v1beta2
#kind: ManagedCertificate
#metadata:
#  name: lhci-example-com
#spec:
#  domains:
#    - lhci.example.com
